--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.8",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.4.530",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
-    "react-pdf": "^10.2.0",
+    "react-pdf": "^10.3.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
