--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "8.5.1",
     "gsap": "^3.14.2",
     "input-otp": "1.4.1",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.454.0",
     "next": "15.2.8",
     "next-themes": "^0.4.4",
@@ -70,6 +71,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "shadcn": "^3.6.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
